# agora-neo4j

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  generate_neo4j_graph.py  pyproject.toml
.agent/skills/: add_cli_command.md  add_infra_method.md  add_listing_field.md  debug_check.md  write_tests.md
.agent/workflows/: add_command.md  add_field.md  fix_check.md
infrastructure/: Dockerfile.web  Dockerfile.worker  docker-compose.elasticsearch.yml  docker-compose.kafka.yml  docker-compose.monitoring.yml  docker-compose.neo4j.yml  docker-compose.web.yml  docker-compose.worker.yml
infrastructure/prometheus/: prometheus.yml
src/: __init__.py  __main__.py  cli.py  config.py  error_handling.py  http.py  neo4j_graph.py  web.py  worker.py
src/analyzers/: __init__.py  ai_analyzer.py  base.py  document_models.py  document_parser.py  javascript_analyzer.py  php_analyzer.py  python_analyzer.py  report_generator.py  ruby_analyzer.py  task_bug_analyzer.py  treesitter_base.py
src/commands/: __init__.py  commands.py  delete_cmd.py  import_cmd.py  match_cmd.py  output.py  post.py  search_cmd.py
src/domain/: __init__.py  embed_text.py  models.py
src/infrastructure/: __init__.py  embedder.py  es_client.py  indexer.py  kafka_consumer.py  kafka_producer.py  serializers.py
src/ports/: __init__.py  command_bus.py  embedder_port.py  event_bus.py  listing_store.py  search_store.py
src/services/: __init__.py  factories.py  listing_service.py  match_service.py  search_service.py  worker_service.py
src/tests/: conftest.py  test_config.py  test_conftest_coverage.py  test_error_handling.py  test_init.py  test_worker.py
src/tests/commands/: __init__.py  test_delete_cmd.py  test_import_cmd.py  test_match_cmd.py  test_post_cmd.py  test_search_cmd.py
src/tests/domain/: test_embed_text.py  test_embed_text_extra.py  test_models.py
src/tests/infrastructure/: test_embedder.py  test_es_client.py  test_kafka_consumer.py  test_kafka_producer.py
src/tests/services/: __init__.py  test_factories.py  test_listing_service.py  test_match_service.py  test_search_service.py  test_worker_service.py
src/ui/: app.js  index.html  style.css
