[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ──────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────
[project]
name        = "agora-market"
version     = "0.1.0"
description = "AI-powered classified ads service (CLI + future HTTP)"
readme      = "README.md"
requires-python = ">=3.13"
license     = { text = "MIT" }

dependencies = [
    "fastembed==0.8.0",
    "elasticsearch==8.13.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "click>=8.3.1",
    "rich>=14.3.3",
    "kafka-python-ng>=2.2.3",
    "numpy>=2.4.4",
]

[project.scripts]
agora = "src.cli:cli"
neo4j-graph = "src.neo4j_graph:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    # type stubs
    "types-requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ──────────────────────────────────────────────────────────────
# Ruff — linter + formatter (replaces flake8, isort, black)
# ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length    = 100
src            = ["src",]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modern Python syntax)
    "SIM",  # flake8-simplify
    "PTH",  # use pathlib instead of os.path
    "ANN",  # type annotations
    "RET",  # flake8-return
    "TRY",  # tryceratops (exception handling best practices)
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print (no print statements in library code)
]
ignore = [
    "ANN401",  # dynamically typed expressions (Any)
    "TRY003",  # long exception messages (common in CLI apps)
    "TRY301",  # abstract raise to inner function
    "B008",    # do not perform function calls in default arguments (Click pattern)
]

[tool.ruff.lint.per-file-ignores]
"src/tests/**" = [
    "ANN",      # no type annotations required in tests
    "T20",      # print() allowed in tests
    "SIM117",   # allow multiple with statements in tests
]
"src/commands/**" = [
    "T20",      # print() used via Console, not bare print
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

# ──────────────────────────────────────────────────────────────
# Mypy — static type checking
# ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.13"
strict                 = true
warn_return_any        = true
warn_unused_ignores    = true
warn_unreachable       = true
show_error_codes       = true
pretty                 = true
files                  = ["src"]   # check all production code
exclude                = ["src/tests"]  # tests do not require strict type annotations

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "fastembed.*",
    "kafka.*",
    "elasticsearch.*",
    "elastic_transport.*",
    "pyan.*",
]
ignore_missing_imports = true
ignore_errors          = true

# ──────────────────────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths       = ["src/tests"]
addopts         = "-v --tb=short"
python_files    = "test_*.py"
python_classes  = "Test*"
python_functions = "test_*"

# ──────────────────────────────────────────────────────────────
# Coverage
# ──────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["src"]
omit     = ["src/__main__.py", "src/http.py", "src/neo4j_graph.py"]

[tool.coverage.report]
fail_under = 98
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
